# sagemaker-mlops

./: README.md  generate_requirements_from_pdm_lockfile.py  pyproject.toml  requirements.txt  sagemaker_sklearn_custom_script.ipynb  script.py  script_test.py
